SignUp and SignIn With Google

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/svg+xml" href="images/logo-coloured.svg">
 </head>
 <body>
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
   <app-root></app-root>
 </body>
 </html>
